--- a/01.Rmd
+++ b/01.Rmd
@@ -22,9 +22,9 @@ output:
 
 По окончании минувшего заседания ЭСКМО, сенатор ясно дал понять мне, что Корнуэлл в любом случае будет вынужден покинуть базу, иначе мы окажемся втянутыми в политический конфликт. Будучи капитаном м83, я отлично осознавала, что сейчас моей первой задачей было всеми силами воспрепятствовать этому, так что чем бы ни руководствовался Корнуэлл, оставаясь здесь все это время, вскоре ему предстояло вернуться домой.
 
-– Доброе утро, Капитан. Я
+– Доброе утро, Капитан. 
 
-обернулась и увидела приближающегося ко мне Корнуэлла. Он, как обычно, рассеяно приветствовал меня своей старческой улыбкой.
+Я обернулась и увидела приближающегося ко мне Корнуэлла. Он, как обычно, рассеяно приветствовал меня своей старческой улыбкой.
 
 Перекинувшись с ним парой привычных фраз, я предложила немного прогуляться.
 
