--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "SciFi"
+title: "Целься в Луну"
 author: "Александра Булгакова"
 # date: '2016'
 site: bookdown::bookdown_site
 documentclass: book
-url: https://bipoliarnayazvezda.github.io/scifi/
-github-repo: bipoliarnayazvezda/scifi
+url: https://bipoliarnayazvezda.github.io/moon/
+github-repo: bipoliarnayazvezda/moon
 description: ""
 link-citations: true
 ---
