--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,30 @@
 ---
 title: "Целься в Луну"
 author: "Александра Булгакова"
-# date: '2016'
 site: bookdown::bookdown_site
 documentclass: book
 url: https://bipoliarnayazvezda.github.io/moon/
 github-repo: bipoliarnayazvezda/moon
-description: ""
+description: ''
 link-citations: true
 ---
 
-# {-}
+# Пролог {-#00}
+
+Из окон видны чарующие очертания Земли, а в пространстве витает безмолвная космическая музыка. Ее голоса никогда не прекращают звучать, расставляя все по местам, утверждая тебя в этом Мире.
+
+Здесь все прекрасно: куда ни глянь – вокруг сплошные звезды. Виден и млечный путь, и бриллиантовая кожа Солнца, и волшебный холод Луны, и (да!) непрекращающиеся звездопады. Нет, я не тоскую по дому.
+
+Синий кислород – лучшее изобретение нашей компании. Благодаря ему жители Земли обрели возможность с легкостью дышать вне своей планеты. Именно из-за использования синего кислорода время на m83 (как и на всей орбите) течет медленней, нежели на Земле, заметно отдаляя момент старения. Часы/минуты/секунды…земное время больше ничего не значит, важны лишь мгновения, пространство, Космос.
+
+Прошло более пяти сотен лет с тех пор, как человек впервые ступил на Луну и около ста лет со дня основания «ЭСКМО». Всего за несколько десятилетий этим ребятам удалось создать то, к чему человечество стремилось на протяжении всего своего существования: ближние галактические участки открыты для всех, а «светлую» часть Луны может посетить любой желающий. Именно этим мы и занимаемся на m83: сканируем лунную поверхность, следим за безопасностью Луны и прилегающих к ней участков, способствуем продвижению экономики страны благодаря туризму.
+
+Сейчас в доступе «ЭСКМО» 49% лунной поверхности, (17 из которых открыты для штатских). В их число входят кратерные парки, ледяные озера, циановые леса и васильковые поля. Луна примечательна своей естественностью. Здесь нет ни одного небоскреба, завода или аэропорта, все технические здания расположены на базах, примыкающих к Луне, отчего, не смотря ни на что, она все так же остается Луной.
+
+Очарованные таким спокойствием, люди спешат к нам с наступлением выходных.
+
+Обычно, дорога к Луне занимает 83 минуты, если воспользоваться нашими услугами. Самостоятельные же попытки требуют много больше времени, а, чаще всего, и вовсе не дают результата: трассы в космосе до сих пор отсутствуют (ввиду непостоянности последнего). Мы пользуемся лишь собственными маршрутами.
+
+Мое присутствие на m83 длится около десяти земных лет, однако, мне оно видится втрое дольше. Сейчас я занимаю, возможно, высшую ступень своей карьеры на m83, какую я бы только могла себе позволить. Единственный человек, стоящий выше меня – Сенатор Денхольм Куинн, в чьем попечительстве находятся все легальные космические участки. Я встречаюсь с ним утром каждого вторника на еженедельном совете «ЭСКМО», куда обычно прибывают доверенные лица восьми галактических баз, что являются ответвлениями корпорации, для привычного обсуждения вопросов безопасности, экономики и ее дальнейшего продвижения.
+
+Меня зовут капитан Отэм Раст и я являюсь руководителем первой по величине космической базы, m83. Как я к этому пришла? Я целилась в Луну и оказалась среди звезд.
