--- a/08.Rmd
+++ b/08.Rmd
@@ -142,7 +142,7 @@ output:
 
 – Докладывайте, Сержант.
 
-– В прошедшие сутки на протяжении одной четверти указанная зона была подвержена обыску. Задействованы были четверо солдат, включая меня. Следуя Вашим указаниям, мы также прибегли к помощи двух специалистов по бурению лунной поверхности: докторов &lt;хуйзнает&gt; и &lt;нухуйегознает&gt;. В результате исследования, зафиксированные ранее датчиками толчки были подтверждены. Они взяли начало при семидесяти шести метрах под уровнем поверхности, и на протяжении небольшого отрезка времени достигли самой высшей и, казалось бы, невозможной точки – восемнадцати метров _над_ уровнем поверхности. Об этом также свидетельствуют повреждения, оставленные на самой поверхности, которые Джоуэлл Блек, вероятно, и счел за следы бурения. В ходе поисков ни исчезнувший луноход, числящийся под номером одиннадцать, ни сам Джек Метьюз, или какие-либо следы пребывания в указанном участке последнего, не были обнаружены.
+– В прошедшие сутки на протяжении одной четверти указанная зона была подвержена обыску. Задействованы были четверо солдат, включая меня. Следуя Вашим указаниям, мы также прибегли к помощи двух специалистов по бурению лунной поверхности: докторов Крамера и Хантли. В результате исследования, зафиксированные ранее датчиками толчки были подтверждены. Они взяли начало при семидесяти шести метрах под уровнем поверхности, и на протяжении небольшого отрезка времени достигли самой высшей и, казалось бы, невозможной точки – восемнадцати метров _над_ уровнем поверхности. Об этом также свидетельствуют повреждения, оставленные на самой поверхности, которые Джоуэлл Блек, вероятно, и счел за следы бурения. В ходе поисков ни исчезнувший луноход, числящийся под номером одиннадцать, ни сам Джек Метьюз, или какие-либо следы пребывания в указанном участке последнего, не были обнаружены.
 
 Затаив дыхание, я ошарашено смотрела вперед себя, не будучи в состоянии вымолвить и слово.
 
