--- a/09.Rmd
+++ b/09.Rmd
@@ -8,13 +8,13 @@ output:
 
 # Земля {#09}
 
-Уже который вечер подряд я усаживался в садовое плетеное кресло на заднем дворе своего дома в Кентуки, и с наслаждением наблюдал, как над городом сгущались первые сумерки. Радиоприемник, стоящий на веранде еще с самых незапамятных времен, передавал «Где-то за радугой» Томаса Ньюмана. Подобные радиопередачи сейчас были редкостью. Их слушал лишь небольшой процент земного населения, и, большей частью, это были такие же старики как я, всю жизнь скучающие по былым временам.
+Уже который вечер подряд я усаживался в садовое плетеное кресло на заднем дворе своего дома в Кентукки, и с наслаждением наблюдал, как над городом сгущались первые сумерки. Радиоприемник, стоящий на веранде еще с самых незапамятных времен, передавал «Где-то за радугой» Томаса Ньюмана. Подобные радиопередачи сейчас были редкостью. Их слушал лишь небольшой процент земного населения, и, большей частью, это были такие же старики как я, всю жизнь скучающие по былым временам.
 
 В моей руке покоился стакан бренди. Кубики льда в нем медленно покачивались в такт музыке.
 
 Как же чертовски хорошо было, наконец, вернуться домой спустя все эти годы. Столь многое я потерял, находясь вдали отсюда, но сейчас для размышлений были вещи и поважней моего спокойствия…
 
-И все же, насколько приятным было для меня находиться в этом загородном уединении. Стоило мне лишь сойти с трапа космического корабля, и я тут же почувствовал себя прибывшим на чью-то чужую планету. Вокруг все было столь мобилизированно… Для каждого ребенка в порядке вещей было иметь хотя бы одну галаграфическую модель солнечной системы, а от владелицы космической лавки напротив своего дома я узнал, что воздушные галактики в последнее время стали просто нарасхват.
+И все же, насколько приятным было для меня находиться в этом загородном уединении. Стоило мне лишь сойти с трапа космического корабля, и я тут же почувствовал себя прибывшим на чью-то чужую планету. Вокруг все было столь мобилизировано… Для каждого ребенка в порядке вещей было иметь хотя бы одну голографическую модель солнечной системы, а от владелицы космической лавки напротив своего дома я узнал, что воздушные галактики в последнее время стали просто нарасхват.
 
 Поразительно было наблюдать, как люди тянутся ко всему космическому, забывая при этом об истинно земных вещах. Откровенно говоря, я и сам когда-то стремился стать таким. На то были свои причины, но я все же никогда не прекращал ценить красОты простых вещей. А тогда, шагая по улицам, насквозь пропитанным искусственностью, я думал лишь о том, что наличие хотя бы одного деревца на целый квартал для этого мира – уже неплохо.
 
