--- a/12.Rmd
+++ b/12.Rmd
@@ -32,7 +32,7 @@ output:
 
 Одевшись, я взял пальто и направился к выходу, но на половине пути остановился и взглянул на сладко дремлющую Отем. Мне вдруг захотелось оставить ей записку. Удивительно… В смысле, ну кто теперь занимается подобными вещами, когда различные устройства моментальной связи всегда при тебе? Но я лишь отмахнулся от этих так себе аргументов.
 
-Ручка для &lt;сенсорного?&gt; стола у меня была. Она отлично подходила и для бумаги. Единственной сложностью оказалось найти хоть какой-нибудь лист. Этой ночью мы остались в моей комнате, и я вообще не был уверен, что где-то здесь может быть что-то подходящее. Пришлось перерыть все свои вещи, но в итоге я кое-что нашел. Передо мной лежали два снимка. Один из них – мое первое фото луны – был со мной с тринадцати лет; я сделал его, будучи совсем ребенком, так что изображение было немного нечетким. Другой, прибывший вместе со мной из Страны Садов – той части Парижа, что по-прежнему сохраняла свой цветущий вид. Мне довелось побывать там чуть менее года назад – деловая поездка, темы которой я уже совсем не помнил, зато восхищение от увиденных в тот день красот надолго поселилось в моей памяти.
+Ручка для стола у меня была - она отлично подходила и для бумаги. Единственной сложностью оказалось найти хоть какой-нибудь лист. Этой ночью мы остались в моей комнате, и я вообще не был уверен, что где-то здесь может быть что-то подходящее. Пришлось перерыть все свои вещи, но в итоге я кое-что нашел. Передо мной лежали два снимка. Один из них – мое первое фото луны – был со мной с тринадцати лет; я сделал его, будучи совсем ребенком, так что изображение было немного нечетким. Другой, прибывший вместе со мной из Страны Садов – той части Парижа, что по-прежнему сохраняла свой цветущий вид. Мне довелось побывать там чуть менее года назад – деловая поездка, темы которой я уже совсем не помнил, зато восхищение от увиденных в тот день красот надолго поселилось в моей памяти.
 
 Поколебавшись немного и сравнив обе фотографии, я, все же, выбрал вторую, и, перевернув ее, написал на обратной стороне:
 
@@ -60,7 +60,7 @@ _Стар_
 
 Но я застала его спящим в зале отдыха. Вокруг не было ни души. Только полуметровая проекция Луны вращалась под потолком в самом центре помещения. Старлайт же дремал за столом, уронив голову на руки.
 
-Я осторожно коснулась его плеча, и Старлайт тут же преподнял голову.
+Я осторожно коснулась его плеча, и Старлайт тут же приподнял голову.
 
 – Который час? – с затуманенным взглядом спросил он. – Я все пропустил?
 
@@ -105,7 +105,7 @@ _Стар_
 
 Должно быть, это и есть одно из тех прекраснейших мгновений жизни, когда понимаешь, что твоя давняя мечта наконец стала реальностью. Но вместо наступления ожидаемого опустошения чувствуешь, как твое сознание заполняется лишь новыми целями и стремлениями, число которых сводится к вечности.
 
-&nbsp;В абсолютном одиночестве я мчался сквозь космическое пространство, со всех сторон облаченное в звезды, и чувствовал себя как никогда замечательно, а вместе с тем и волнительно. Эмоции, нахлынувшие на меня в этот самый момент, были сравнимы с первым поцелуем Отем, когда просто смотришь на человека, и чувствуешь, что — это твоя судьба. Это мгновенье напомнило мне и о том дне, в который я впервые услышал запись со своей первой рапсодией. Волшебно.
+В абсолютном одиночестве я мчался сквозь космическое пространство, со всех сторон облаченное в звезды, и чувствовал себя как никогда замечательно, а вместе с тем и волнительно. Эмоции, нахлынувшие на меня в этот самый момент, были сравнимы с первым поцелуем Отем, когда просто смотришь на человека, и чувствуешь, что — это твоя судьба. Это мгновенье напомнило мне и о том дне, в который я впервые услышал запись со своей первой рапсодией. Волшебно.
 
 Как и тогда, сейчас я знал, что мне все удастся, но все равно немного пережевал ввиду важности задуманного.
 
@@ -113,13 +113,13 @@ _Стар_
 
 Большинство военных также накрыла волна всеобщего интереса. Обступив окна своих комнат, они удивленно глазели в мою сторону, пытаясь разобраться в происходящем. Вместе со старпомом Отем наблюдала за взлетом, выйдя на террасу своего кабинета. Взглянув на Отем, я подумал о том, что никогда прежде не видел ее столь серьезной. В тот момент, когда «РокСтар» вспарил над землей, я смотрел на свою любимую, но видел лишь руководителя этого места. Вместе с этой сосредоточенностью Отем выглядела гораздо старше своих лет. Нет, не так: внешне она сейчас практически соответствовала своему настоящему возрасту.
 
-Я вздохнул и закрыл глаза лишь на мгновенье, а после — корабль взлетел, незаметно набирая скорость. Пронесясь над зданием штаба, он плавно преодолел расстояние между космодромом и тем местом, где заканчивалась база. Секунду спустя судно вышело в открытый космос и достнгнув скорости света помчался прямиком по курсу. М83 скрылась за моей спиной, но я отлично знал, как ее отыскать.
+Я вздохнул и закрыл глаза лишь на мгновенье, а после — корабль взлетел, незаметно набирая скорость. Пронесясь над зданием штаба, он плавно преодолел расстояние между космодромом и тем местом, где заканчивалась база. Секунду спустя судно вышло в открытый космос и достигнув скорости света помчался прямиком по курсу. М83 скрылась за моей спиной, но я отлично знал, как ее отыскать.
 
 — Задать новый маршрут? — предложил лишенный эмоций голос корабля, который так походил на голоса людей, подолгу дышащих синим кислородом.
 
 Я согласился.
 
-Контрольная панель «РокСтара» представляла собой тонкую сенсорную поверхность и внешне напоминала так популярные на базе столы, по модели которых она, собственно, и была выполнена. Удивившись собственному спокойствию, я потянулся к музыке. Штернбренер все предусмотрел. Я запустил «Натупление эры» и, выставив максимальную громкость, вернулся взглядом к картам. Сейчас они занимали практически половину панели, разместившись в самом ее центре. Как и задумывалось, они были единственным, с помощью чего я выстраивал свой маршрут на Землю. Заблаговременно развернув и увеличив нужный отрезок пути, теперь я просто внимательно наблюдал за ловцом звезд, периодически сравнивая его данные с показателями на карте.
+Контрольная панель «РокСтара» представляла собой тонкую сенсорную поверхность и внешне напоминала так популярные на базе столы, по модели которых она, собственно, и была выполнена. Удивившись собственному спокойствию, я потянулся к музыке. Штернбренер все предусмотрел. Я запустил «Наступление эры» и, выставив максимальную громкость, вернулся взглядом к картам. Сейчас они занимали практически половину панели, разместившись в самом ее центре. Как и задумывалось, они были единственным, с помощью чего я выстраивал свой маршрут на Землю. Заблаговременно развернув и увеличив нужный отрезок пути, теперь я просто внимательно наблюдал за ловцом звезд, периодически сравнивая его данные с показателями на карте.
 
 Перед глазами все еще стоял образ Отем. Не той, какой я видел ее перед взлетом, другой – взволнованной и влюбленной, какой она провожала меня в путь. Эта картина оставалась со мной на протяжении всего полета, отвлекая от переживаний, и лишь позже, увидев ее снова, я смог действительно осознать то, что мне, наконец, удалось сделать. Теперь происходящее со мной было вполне реально.
 
