--- a/16.Rmd
+++ b/16.Rmd
@@ -51,7 +51,7 @@ output:
 
 – Мне нужны сводки земных новостей за.., – я ненадолго задумалась, – ... последний месяц.
 
-– Сию минуту преступлю к делу, Капитан.
+– Сию минуту приступлю к делу, Капитан.
 
 Гастингс молниеносно черкнул что-то в своей записной книге и вновь перевел свой взгляд в мою сторону.
 
@@ -87,7 +87,7 @@ output:
 
 Прежде, чем старпом успел пересечь и половину холла, я повернулась лицом в шеренге солдат.
 
-– Простите мое временное отсутствие, имелись неотложные дела, – произнесла я. – Насколько я помню, на эту неделю у нас с вами были запланированы ежеквартальные учения. Так давайте же преступим.
+– Простите мое временное отсутствие, имелись неотложные дела, – произнесла я. – Насколько я помню, на эту неделю у нас с вами были запланированы ежеквартальные учения. Так давайте же приступим.
 
 \*
 
