--- a/17.Rmd
+++ b/17.Rmd
@@ -33,11 +33,11 @@ output:
 
 Первым делом с решил отправиться в университету. Нужно было окончательно решить вопрос с моим увольнением, потому что, уезжая в прошлый раз, я лишь оформил перевод на м83 сроком на год, а после мне предстояло вновь вернуться к преподаванию, чего теперь мне хотелось меньше всего. Нет, я всегда любил свою работу в университете, но по истечению времени все это казалось мне таким приземленным.
 
-Если честно, раньше я и сам до конца не верил в то, что мне удастся осуществить задуманное, ведь в какой-то степени этот проект был для меня не более чем красивой мечтой, но вид каттеджного городка в мой первый вечер на м83 и, конечно, появление Отем изменили многое в моей жизни. В итоге же события последних месяцев оказались для меня гораздо важней чего бы то ни было.
+Если честно, раньше я и сам до конца не верил в то, что мне удастся осуществить задуманное, ведь в какой-то степени этот проект был для меня не более чем красивой мечтой, но вид коттеджного городка в мой первый вечер на м83 и, конечно, появление Отем изменили многое в моей жизни. В итоге же события последних месяцев оказались для меня гораздо важней чего бы то ни было.
 
 Поглощенный вихрем собственных мыслей, я чуть было не пропустил нужную остановку, но вовремя увидев в окне поезда хорошо знакомую крышу своего дома, в последний момент успел проскочить в закрывающуюся дверь.
 
-Двадцати пяти этажный дом, в котором я снимал квартиру, был маловат для центра города, но довольно заметным для спального района, где он и находился. В основном, здесь преобладали каскадные пятиэтажки, а кое-где и вовсе можно было встретить двухъярусные домики. Спустившись вниз по эскалатору, я вышел из здания &lt;метро&gt;, и, быстрым шагом перейдя улицу, оказался около своего дома.
+Двадцати пяти этажный дом, в котором я снимал квартиру, был маловат для центра города, но довольно заметным для спального района, где он и находился. В основном, здесь преобладали каскадные пятиэтажки, а кое-где и вовсе можно было встретить двухъярусные домики. Спустившись вниз по эскалатору, я вышел из здания метро, и, быстрым шагом перейдя улицу, оказался около своего дома.
 
 Я поднял голову, стараясь разглядеть свои окна, но зимнее солнце этим утром ослепляло, не позволяя мне что-либо увидеть. Протяжно вздохнув, я вошел в здание. На пути мне встретились соседские ребятишки, с радостными криками пересекающие холл. И вот вскоре я стоял на пороге своего дома.
 
@@ -69,7 +69,7 @@ output:
 
 Во-первых, он однозначно был самым заинтересованным в астрономии студентом на всем курсе, если не сказать факультете. Курт, как губка, впитывал каждое слово, сказанное мной во время лекций, (будь это давняя теория, или незначительный факт) но при этом никогда не терял интереса к новым знаниям. Именно благодаря таким ребятам как Курт мне всегда нравилось преподавать: видеть этот неподдельный интерес в глазах подростка, делиться собственными знаниями и соображениями на ту или иную тему.
 
-Во-вторых, Курт уже второй год занимался собственным научным проектом, и в даный момент тот был полностью сконцентрирован на Луне. Хотя на первый взгляд тема его работы могла показаться шуточной, парень был настроен весьма серьезно. Еще до моего отъезда, он еженедельно брал консультации у нескольких преподавателей, включая меня. И пускай я, как и подавляющее большинство его окружения, не был сторонником этой лишь начинавшей вырисовываться идеи, не могу сказать, что меня она не интересовала. Ведь наше внимание всегда получают в первую очередь те, кто решается пойти против течения.
+Во-вторых, Курт уже второй год занимался собственным научным проектом, и в данный момент тот был полностью сконцентрирован на Луне. Хотя на первый взгляд тема его работы могла показаться шуточной, парень был настроен весьма серьезно. Еще до моего отъезда, он еженедельно брал консультации у нескольких преподавателей, включая меня. И пускай я, как и подавляющее большинство его окружения, не был сторонником этой лишь начинавшей вырисовываться идеи, не могу сказать, что меня она не интересовала. Ведь наше внимание всегда получают в первую очередь те, кто решается пойти против течения.
 
 К тому же, я никогда не отметал что-то лишь потому, что другим оно могло показаться глупым, и, в каком-то смысле, допускал абсолютно во все.
 
@@ -99,7 +99,7 @@ output:
 
 Он тут же поник, а я просто не мог позволить себе разочаровать ребенка, следовавшего за своей мечтой. В каком-то смысле, он напоминал мне самого себя в его возрасте.
 
-– Послушай, а почему бы тебе просто не прислать свои вопросы на мой рабочий имэйл? – предложил я. – Я прочту их ближе к ночи, так что утром уже получишь ответ.
+– Послушай, а почему бы тебе просто не прислать свои вопросы на мой рабочий мэйл? – предложил я. – Я прочту их ближе к ночи, так что утром уже получишь ответ.
 
 Курт слегка улыбнулся.
 
@@ -111,7 +111,7 @@ output:
 
 Ошеломленный его тирадой, я не мог не улыбнуться, и немного пораскинув мозгами, решил все таки сдаться.
 
-– Ладно, &lt; &gt;, жду тебя через десять минут в своем кабинете, – произнес я. – И захвати кофе, день обещает быть долгим.
+– Ладно, жду тебя через десять минут в своем кабинете, – произнес я. – И захвати кофе, день обещает быть долгим.
 
 \*
 
@@ -158,7 +158,7 @@ output:
 
 – Старина Хатс, он был примером для нас.
 
-Я подбадривающе ткнула его локтем под бок.
+Я ободряюще ткнула его локтем под бок.
 
 – Еще каким.
 
