--- a/18.Rmd
+++ b/18.Rmd
@@ -13,7 +13,7 @@ output:
 
 Долина Снежных Холмов находится в тридцати трех километрах к северу от центра Денали. Многие годы назад это место было восхитительным заповедником, но, невзирая на настигнувшее ее опустошение, долина по-прежнему входит в число моих любимейших мест на планете.
 
-Время близилось к полудню, а я стоял на обочине дороги, где и брала свое начало долина. Вдалеке за несколькими заброшенными домами виднелась хорошо знакомая крыша родительской усадьбы. Она была расположена у самого подножья холма. Гладя на верхушку своего домика, я подумал, что чего-то определенно не хватает, хотя вроде как все было на месте. Тогда я закрыл глаза, вернулся мыслями в прошлое, открыл их... и тут же понял, в чем дело. С левой стороны крыши была каминная труба, из недр которой в холода многие годы подряд валил дым. Теперь же, без этой совсем маленькой детали, родной дом уже не казался мне таким уютным. А посему, достигнув усадьбы, я первым делом решил развести пламя в камине. И когда я сделал это и вновь взглянул на усадьбу с улицы, мне словно стало гораздо легче дышать.
+Время близилось к полудню, а я стоял на обочине дороги, где и брала свое начало долина. Вдалеке за несколькими заброшенными домами виднелась хорошо знакомая крыша родительской усадьбы. Она была расположена у самого подножья холма. Глядя на верхушку своего домика, я подумал, что чего-то определенно не хватает, хотя вроде как все было на месте. Тогда я закрыл глаза, вернулся мыслями в прошлое, открыл их... и тут же понял, в чем дело. С левой стороны крыши была каминная труба, из недр которой в холода многие годы подряд валил дым. Теперь же, без этой совсем маленькой детали, родной дом уже не казался мне таким уютным. А посему, достигнув усадьбы, я первым делом решил развести пламя в камине. И когда я сделал это и вновь взглянул на усадьбу с улицы, мне словно стало гораздо легче дышать.
 
 Закончив все дела в городе, я вернулся к тому, с чего начинал. Вскоре мне предстояло отправиться на м83, начать там новый проект, а вместе с тем — и новую жизнь, и я, конечно, был рад этому, но сейчас у меня все еще оставалось пять дней, которые я мог и хотел провести именно здесь. Ведь, по сути, больше ничто не удерживало меня на Земле, кроме как эта усадьба, и воспоминания, связанные с ней. Но последние всегда будут храниться в моем сердце, а там, далеко за звездами, меня ждала Отем и дело всей моей жизни, оттого выбор совсем не был сложным. Однако, прежде чем вновь покинуть Землю, у меня оставалось еще одно дельце.
 
