--- a/19.Rmd
+++ b/19.Rmd
@@ -184,11 +184,11 @@ output:
 
 – Кажется, да, – я ошарашено оглянулась по сторонам, пытаясь понять, что только что произошло.
 
-Местами земля укрылась трещинами, а кое-где даже отделилась от поверхности и теперь нависла над ней бесформенными пластами, напоминавшими края рваной раны. Сейчас окружающий нас пейзаж уже не выглядел столь прекрасным, как каких-то десять секунд назад. Он попросту казался мне фальшивкой: из-под сдвинувшихся с места снежных пластин пробивались стабилизаторы температуры. Их работа была нарушена появлением толчков, и теперь снег постепенно начинал таять. Я знала, что уже через час он и вовсе исчезнет под лучами искусственного освещения, которое, к счастья, не пострадало. Я подняла голову, желая убедиться в этом наверняка, но тут же с ужасом вскрикнула. Прямо в лежавшем над нами пространстве образовалась немыслимых размеров трещина. Она тянулась от самых лавандовых полей – той части, где брал свое начало колпак, наполненный синим воздухом, – и заканчивалась высоко над ледяными озерами.
+Местами земля укрылась трещинами, а кое-где даже отделилась от поверхности и теперь нависла над ней бесформенными пластами, напоминавшими края рваной раны. Сейчас окружающий нас пейзаж уже не выглядел столь прекрасным, как каких-то десять секунд назад. Он попросту казался мне фальшивкой: из-под сдвинувшихся с места снежных пластин пробивались стабилизаторы температуры. Их работа была нарушена появлением толчков, и теперь снег постепенно начинал таять. Я знала, что уже через час он и вовсе исчезнет под лучами искусственного освещения, которое, к счастью, не пострадало. Я подняла голову, желая убедиться в этом наверняка, но тут же с ужасом вскрикнула. Прямо в лежавшем над нами пространстве образовалась немыслимых размеров трещина. Она тянулась от самых лавандовых полей – той части, где брал свое начало колпак, наполненный синим воздухом, – и заканчивалась высоко над ледяными озерами.
 
 – Отем? – еще сильней встревожился Старлайт.
 
-– Взгляни в небо, – не сводя глаз с трещины, произнесла я. –Баланс воздуха нарушен.
+– Взгляни в небо, – не сводя глаз с трещины, произнесла я. – Баланс воздуха нарушен.
 
 – Вижу…
 
@@ -230,7 +230,7 @@ output:
 
 Он отключился.
 
-– Мудила гребанный! – вскипела я, и вновь попыталась дозвониться Сириусу. – Черт возьми, связи нет. Такое чувство, что ее блокируют с самого штаба.
+– Мудила гребаный! – вскипела я, и вновь попыталась дозвониться Сириусу. – Черт возьми, связи нет. Такое чувство, что ее блокируют с самого штаба.
 
 Земля задрожала еще раз. Теперь толчок раздался уже гораздо ближе к нам, и по небу поползла очередная трещина. И без того приглушенный свет постепенно начинал гаснуть.
 
