--- a/20.Rmd
+++ b/20.Rmd
@@ -48,7 +48,7 @@ output:
 
 Многие из присутствующих уже слегка оправились от шока, и, понизив голос, понемногу начинали обсуждать происходящее, не сводя глаз с Отем Раст и сенатора Куинна. Только я молча продолжал наблюдать за творившимся в зале. На лице каждого был написан вопрос, который пока еще никто не осмеливался задать.
 
-Страшно было даже допустить саму мысль о том, чтобы встрять в их разговор. Ясно-синие глаза Отем Раст потускнели, и теперь в них виднелась лишь испепеляющая ярость. Такой я не видел ее никогда, да и вообще не припомню хотя бы один случай, в котором кто-то из жителей орбиты вел себя подобным образом. Это казалось невозможным, ведь синий водух отнимал и подавлял большинство наших эмоций.
+Страшно было даже допустить саму мысль о том, чтобы встрять в их разговор. Ясно-синие глаза Отем Раст потускнели, и теперь в них виднелась лишь испепеляющая ярость. Такой я не видел ее никогда, да и вообще не припомню хотя бы один случай, в котором кто-то из жителей орбиты вел себя подобным образом. Это казалось невозможным, ведь синий воздух отнимал и подавлял большинство наших эмоций.
 
 Заметив нарастающую в зале суету, сенатор поднял ладони, призывая капитанов к тишине.
 
@@ -122,7 +122,7 @@ output:
 
 Чуть ли не дрожащий сенатор отлепился от стены. Он пошатнулся, но смог удержать равновесие. Мне показалось, что сейчас Отем вновь замахнется, но и этого не произошло.
 
-– Больше ни одна жизни не прервется по твоей вине, – четко выговаривая каждое слово, произнесла капитан Раст.
+– Больше ни одна жизнь не прервется по твоей вине, – четко выговаривая каждое слово, произнесла капитан Раст.
 
 Ее голос звучал ясно и спокойно, и, несмотря на свой внешний вид, она уже больше походила на руководителя лунной базы.
 
