--- a/21.Rmd
+++ b/21.Rmd
@@ -104,12 +104,6 @@ output:
 
 Убедившись в том, что поблизости нет никого, способного остановить на мне свой любопытный взгляд, я поспешно вошла в здание пятого сектора, и быстрыми шагами поднялась в квартиру Корнуэлла.
 
-В нос тут же ударил знакомый запах винила и красного дерева. Я бы смогла узнать это место даже с закрытыми глазами. Впереди мне предстояло завершить уйму дел, ко многим из которых я еще и не преступала, однако сейчас мне хотелось иного. Я просто знала, что должна придти именно сюда.
+В нос тут же ударил знакомый запах винила и красного дерева. Я бы смогла узнать это место даже с закрытыми глазами. Впереди мне предстояло завершить уйму дел, ко многим из которых я еще и не приступала, однако сейчас мне хотелось иного. Я просто знала, что должна придти именно сюда.
 
 Вздохнув, я подняла темную крышку рояля и присела на небольшое кресло с замшевой обивкой, что стояло перед инструментом. Поставила руки на клавиши так, как учил меня Старлайт… и, все-таки, невероятно сложным для меня оказалось сдержать слезы. Они тут же подступили, стоило лишь прозвучать первой ноте. Пришлось остановиться, дабы убрать стекающие по щекам слезы. Я провела по ним просторным рукавом кофты, и начала мелодию заново.
-
-22
-
-шеренга солдат уже заполнила весь холл, когда я спустилась на первый этаж.
-
-Не произнеся ни слова, я миновала ее, поначалу не замечая удивленных, а кое-где и смущенных взглядов. Лишь пройдя треть своего пути, я обратила на это внимание.
