--- a/23.Rmd
+++ b/23.Rmd
@@ -64,7 +64,7 @@ output:
 
 – Ясно. Ищите дальше. Я перезвоню позже, и, не приведи небеса, я услышу, что ты снова подскочил к телефону.
 
-Джонни хотел еще что-то сказать, но связь уже оборвалась. Он положил трубку на место и бросил раздраженный взгляд на телефон. Аппарат был старше всех их вместе взятых. Корнуэлл приобрел его много лет назад в Голливуде, на аукционе, посвященном предметам из черно-белого кино. Этому телефону удалось засветиться в летне «Некоторые любят погарячее». Корнуэлл хранил его в память о старых временах, в которые никогда не жил, но коими был очарован с самого детства. Сейчас можно было запросить целое состояние за такой предмет.
+Джонни хотел еще что-то сказать, но связь уже оборвалась. Он положил трубку на место и бросил раздраженный взгляд на телефон. Аппарат был старше всех их вместе взятых. Корнуэлл приобрел его много лет назад в Голливуде, на аукционе, посвященном предметам из черно-белого кино. Этому телефону удалось засветиться в летне «Некоторые любят погорячее». Корнуэлл хранил его в память о старых временах, в которые никогда не жил, но коими был очарован с самого детства. Сейчас можно было запросить целое состояние за такой предмет.
 
 – Где ты только берешь это старье? – прошипел Джонни. – Весь дом им набит.
 
